# dotfiles

./: .gitconfig  .gitignore  .pre-commit-config.yaml  .yamllint  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pubspec.yaml  sapling-setup.sh  setup-mac.sh  version_bump.dart
.changeset/: nice-suits-cross.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/actions/check/: action.yml
.github/actions/install-deps/: action.yml
.github/workflows/: cla.yml  lock-merged-prs.yml  ollama-tool.yml  ollama.yml  pre-commit.yml  release.yml  update-tracking.yml  version-bump.yml
.github/workflows/automation/: version-bump.yml
Formula/: dotfiles.rb
auth/: login.sh
git-hooks/: commit-msg  pre-push
homebrew-scripts/: check-outdated.sh  cleanup-brew.sh  install-common-tools.sh  install-languages.sh  install-utilities.sh  minimal-install.sh  update-brew.sh
ollama/: Cargo.toml  README.md  quick-start.sh  run.sh
ollama-tool/: README.md  run.sh
ollama-tool/src/: cli.rs  main.rs
ollama/src/: cli.rs  lib.rs  main.rs  models.rs  ollama.rs  prompts.rs
ollama/tests/: e2e.rs  integration.rs
restore/: update_and_restore.sh
sync/: dotfiles-sync.sh
test/: dotfiles_test.dart
