[package]
name = "github-dotfiles-ollama"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
scraper = { version = "0.25", default-features = false }
thiserror = "1.0"

[dev-dependencies]
httpmock = "0.8"
