[package]
name = "github-dotfiles-ollama"
version = "0.1.0"
edition = "2021"
authors = ["Niladri Das <bniladridas@users.noreply.github.com>"]
description = "Rust CLI for managing Ollama models"
license = "MIT"
homepage = "https://github.com/dotfiles-mac/dotfiles/tree/main/ollama"
documentation = "https://docs.rs/github-dotfiles-ollama"
repository = "https://github.com/dotfiles-mac/dotfiles/tree/main/ollama"
keywords = ["ollama", "ai", "cli", "models"]
categories = ["command-line-utilities", "api-bindings"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
scraper = "0.18"
thiserror = "1.0"

[dev-dependencies]
# Used for mocking HTTP requests in integration tests
httpmock = "0.8"
